--- a/tech.html
+++ b/tech.html
@@ -56,7 +56,7 @@
           <button class="main__btn"><a href="/">Get Started</a></button>
         </div>
         <div class="main__img--container">
-          <img src="/images/pic5.jpg" alt="pic" id="main__img" />
+          <img src="images/pic5.jpg" alt="pic" id="main__img" />
         </div>
       </div>
     </div>
